kubernetes/apps/icecast/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: icecast
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
